webgpu/src/main/java/org/webgpu/foriegn/webgpu_h.java


    /**
     * {@snippet lang=c :
     * void wgpuRenderBundleEncoderSetVertexBuffer(WGPURenderBundleEncoder renderBundleEncoder, uint32_t slot, WGPUBuffer buffer, uint64_t offset, uint64_t size)
     * }
     */
    public static void wgpuRenderBundleEncoderSetVertexBuffer(MemorySegment renderBundleEncoder, int slot, MemorySegment buffer, long offset, long size) {
        var mh$ = wgpuRenderBundleEncoderSetVertexBuffer.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wgpuRenderBundleEncoderSetVertexBuffer", renderBundleEncoder, slot, buffer, offset, size);
            }
            mh$.invokeExact(renderBundleEncoder, slot, buffer, offset, size);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wgpuRenderBundleEncoderAddRef {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            webgpu_h.C_POINTER
        );

        public static final MemorySegment ADDR = webgpu_h.findOrThrow("wgpuRenderBundleEncoderAddRef");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void wgpuRenderBundleEncoderAddRef(WGPURenderBundleEncoder renderBundleEncoder)
     * }
     */
    public static FunctionDescriptor wgpuRenderBundleEncoderAddRef$descriptor() {
        return wgpuRenderBundleEncoderAddRef.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void wgpuRenderBundleEncoderAddRef(WGPURenderBundleEncoder renderBundleEncoder)
     * }
     */
    public static MethodHandle wgpuRenderBundleEncoderAddRef$handle() {
        return wgpuRenderBundleEncoderAddRef.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void wgpuRenderBundleEncoderAddRef(WGPURenderBundleEncoder renderBundleEncoder)
     * }
     */
    public static MemorySegment wgpuRenderBundleEncoderAddRef$address() {
        return wgpuRenderBundleEncoderAddRef.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void wgpuRenderBundleEncoderAddRef(WGPURenderBundleEncoder renderBundleEncoder)
     * }
     */
    public static void wgpuRenderBundleEncoderAddRef(MemorySegment renderBundleEncoder) {
        var mh$ = wgpuRenderBundleEncoderAddRef.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wgpuRenderBundleEncoderAddRef", renderBundleEncoder);
            }
            mh$.invokeExact(renderBundleEncoder);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wgpuRenderBundleEncoderRelease {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            webgpu_h.C_POINTER
        );

        public static final MemorySegment ADDR = webgpu_h.findOrThrow("wgpuRenderBundleEncoderRelease");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void wgpuRenderBundleEncoderRelease(WGPURenderBundleEncoder renderBundleEncoder)
     * }
     */
    public static FunctionDescriptor wgpuRenderBundleEncoderRelease$descriptor() {
        return wgpuRenderBundleEncoderRelease.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void wgpuRenderBundleEncoderRelease(WGPURenderBundleEncoder renderBundleEncoder)
     * }
     */
    public static MethodHandle wgpuRenderBundleEncoderRelease$handle() {
        return wgpuRenderBundleEncoderRelease.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void wgpuRenderBundleEncoderRelease(WGPURenderBundleEncoder renderBundleEncoder)
     * }
     */
    public static MemorySegment wgpuRenderBundleEncoderRelease$address() {
        return wgpuRenderBundleEncoderRelease.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void wgpuRenderBundleEncoderRelease(WGPURenderBundleEncoder renderBundleEncoder)
     * }
     */
    public static void wgpuRenderBundleEncoderRelease(MemorySegment renderBundleEncoder) {
        var mh$ = wgpuRenderBundleEncoderRelease.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wgpuRenderBundleEncoderRelease", renderBundleEncoder);
            }
            mh$.invokeExact(renderBundleEncoder);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wgpuRenderPassEncoderBeginOcclusionQuery {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            webgpu_h.C_POINTER,
            webgpu_h.C_INT
        );

        public static final MemorySegment ADDR = webgpu_h.findOrThrow("wgpuRenderPassEncoderBeginOcclusionQuery");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void wgpuRenderPassEncoderBeginOcclusionQuery(WGPURenderPassEncoder renderPassEncoder, uint32_t queryIndex)
     * }
     */
    public static FunctionDescriptor wgpuRenderPassEncoderBeginOcclusionQuery$descriptor() {
        return wgpuRenderPassEncoderBeginOcclusionQuery.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void wgpuRenderPassEncoderBeginOcclusionQuery(WGPURenderPassEncoder renderPassEncoder, uint32_t queryIndex)
     * }
     */
    public static MethodHandle wgpuRenderPassEncoderBeginOcclusionQuery$handle() {
        return wgpuRenderPassEncoderBeginOcclusionQuery.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void wgpuRenderPassEncoderBeginOcclusionQuery(WGPURenderPassEncoder renderPassEncoder, uint32_t queryIndex)
     * }
     */
    public static MemorySegment wgpuRenderPassEncoderBeginOcclusionQuery$address() {
        return wgpuRenderPassEncoderBeginOcclusionQuery.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void wgpuRenderPassEncoderBeginOcclusionQuery(WGPURenderPassEncoder renderPassEncoder, uint32_t queryIndex)
     * }
     */
    public static void wgpuRenderPassEncoderBeginOcclusionQuery(MemorySegment renderPassEncoder, int queryIndex) {
        var mh$ = wgpuRenderPassEncoderBeginOcclusionQuery.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wgpuRenderPassEncoderBeginOcclusionQuery", renderPassEncoder, queryIndex);
            }
            mh$.invokeExact(renderPassEncoder, queryIndex);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wgpuRenderPassEncoderDraw {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            webgpu_h.C_POINTER,
            webgpu_h.C_INT,
            webgpu_h.C_INT,
            webgpu_h.C_INT,
            webgpu_h.C_INT
        );

        public static final MemorySegment ADDR = webgpu_h.findOrThrow("wgpuRenderPassEncoderDraw");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void wgpuRenderPassEncoderDraw(WGPURenderPassEncoder renderPassEncoder, uint32_t vertexCount, uint32_t instanceCount, uint32_t firstVertex, uint32_t firstInstance)
     * }
     */
    public static FunctionDescriptor wgpuRenderPassEncoderDraw$descriptor() {
        return wgpuRenderPassEncoderDraw.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void wgpuRenderPassEncoderDraw(WGPURenderPassEncoder renderPassEncoder, uint32_t vertexCount, uint32_t instanceCount, uint32_t firstVertex, uint32_t firstInstance)
     * }
     */
    public static MethodHandle wgpuRenderPassEncoderDraw$handle() {
        return wgpuRenderPassEncoderDraw.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void wgpuRenderPassEncoderDraw(WGPURenderPassEncoder renderPassEncoder, uint32_t vertexCount, uint32_t instanceCount, uint32_t firstVertex, uint32_t firstInstance)
     * }
     */
    public static MemorySegment wgpuRenderPassEncoderDraw$address() {
        return wgpuRenderPassEncoderDraw.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void wgpuRenderPassEncoderDraw(WGPURenderPassEncoder renderPassEncoder, uint32_t vertexCount, uint32_t instanceCount, uint32_t firstVertex, uint32_t firstInstance)
     * }
     */
    public static void wgpuRenderPassEncoderDraw(MemorySegment renderPassEncoder, int vertexCount, int instanceCount, int firstVertex, int firstInstance) {
        var mh$ = wgpuRenderPassEncoderDraw.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("wgpuRenderPassEncoderDraw", renderPassEncoder, vertexCount, instanceCount, firstVertex, firstInstance);
            }
            mh$.invokeExact(renderPassEncoder, vertexCount, instanceCount, firstVertex, firstInstance);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class wgpuRenderPassEncoderDrawIndexed {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            webgpu_h.C_POINTER,
            webgpu_h.C_INT,
            webgpu_h.C_INT,
            webgpu_h.C_INT,
            webgpu_h.C_INT,
            webgpu_h.C_INT
        );

        public static final MemorySegment ADDR = webgpu_h.findOrThrow("wgpuRenderPassEncoderDrawIndexed");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void wgpuRenderPassEncoderDrawIndexed(WGPURenderPassEncoder renderPassEncoder, uint32_t indexCount, uint32_t instanceCount, uint32_t firstIndex, int32_t baseVertex, uint32_t firstInstance)
     * }
     */
    public static FunctionDescriptor wgpuRenderPassEncoderDrawIndexed$descriptor() {
        return wgpuRenderPassEncoderDrawIndexed.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void wgpuRenderPassEncoderDrawIndexed(WGPURenderPassEncoder renderPassEncoder, uint32_t indexCount, uint32_t instanceCount, uint32_t firstIndex, int32_t baseVertex, uint32_t firstInstance)
     * }
     */
    public static MethodHandle wgpuRenderPassEncoderDrawIndexed$handle() {
        return wgpuRenderPassEncoderDrawIndexed.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void wgpuRenderPassEncoderDrawIndexed(WGPURenderPassEncoder renderPassEncoder, uint32_t indexCount, uint32_t instanceCount, uint32_t firstIndex, int32_t baseVertex, uint32_t firstInstance)
     * }
     */
    public static MemorySegment wgpuRenderPassEncoderDrawIndexed$address() {
        return wgpuRenderPassEncoderDrawIndexed.ADDR;
    }
